# LLM_Benchmark

./: .env.example  .gitignore  .pre-commit-config 2.yaml  .pre-commit-config.yaml  CLI_README.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_DONE.md  INSTRUCTIONS.md  LICENSE  README.md  README_LOCAL_LLM.md  README_NSL_KDD.md  USER_GUIDE.md  demo_performance.py  lm_studio_benchmark.py  local_llm_benchmark.py  multi_model_benchmark.py  nsl_kdd_benchmark_results_20250922_230117.json  nsl_kdd_config_example.yaml  nsl_kdd_gemini_benchmark.py  nsl_kdd_lm_studio_benchmark.py  nsl_kdd_openrouter_benchmark.py  pyproject.toml  pytest.ini  test_local_llm.py  validation_results.json  yeko_openrouter_benchmark.py  yeko_openrouter_multilang_benchmark.py  yeko_openrouter_userguide.md
.claude/: settings.local 2.json
.github/: README.md
.github/workflows/: ci-minimal.yml  ci.yml  dependencies.yml  release.yml  security.yml  tests.yml
1Documentations/Main/: architectural_decisions.md  architecture_visualizations.html  llm_cybersec_benchmark_specs-2.md  modular_structure_plan.md
1Documentations/Prompts/: development_prompts.md  development_prompts_2.md  development_prompts_3.md
AllDoc/: AIOHTTP_FALLBACK_FIX.md  AIOHTTP_LAZY_LOADING_FIX.md  CI_OPTIMIZATION_SUMMARY.md  CLI_README.md  EXPLAINABILITY_USAGE_EXAMPLES.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_DONE.md  KAGGLE_DATASET_GUIDE.md  LINTING_FIXES_SUMMARY.md
Documentations/: architectural_decisions.md  modular_structure_plan.md
Documentations/Prompts/: development_prompts_3.md
OlderScripts/: create_sample_kaggle_dataset.py  demo_config.yaml  example_local_config.yaml  lm_studio_few_shot_benchmark.py  lm_studio_kaggle_benchmark.py  simple_lm_studio_test.py  test_kaggle_benchmark.py
benchmarks/: performance_results.md
configs/: default.yaml
configs/datasets/: public_datasets.yaml
configs/examples/: default_experiment.yaml
configs/experiments/: basic_evaluation.yaml  model_comparison.yaml
configs/models/: local_models.yaml
docs/: evaluation_service_api.md  integration_guide.md  model_service_api.md
examples/: analysis_demo.py  api_demo.py  workflow_demo.py
scripts/: validate_documentation.py
src/benchmark/: __init__.py
src/benchmark/cli/: __init__.py  config_commands.py  main.py  setup_entry.py
src/benchmark/core/: __init__.py  base.py  config.py  config_loader.py  config_validators.py  database.py  database_manager.py  exceptions.py  logging.py  performance_optimizer.py
src/benchmark/data/: __init__.py  cache.py  models.py
src/benchmark/evaluation/: __init__.py  api_models.py  base_evaluator.py  batch_evaluator.py  comparison_engine.py  evaluation_api.py  evaluation_workflow.py  result_models.py  results_analyzer.py  results_storage.py
src/benchmark/interfaces/: __init__.py  data_interfaces.py  evaluation_interfaces.py  model_interfaces.py  orchestration_interfaces.py
src/benchmark/models/: __init__.py  model_cache.py  model_validator.py  optimization.py  performance_monitor.py  resource_manager.py
src/benchmark/services/: __init__.py  configuration_service.py  data_service.py  evaluation_service.py  model_service.py  orchestration_service.py
src/benchmark/storage/: __init__.py  database_schema.sql  results_storage.py
src/benchmark/workflow/: __init__.py  workflow_engine.py  workflow_steps.py
tests/: conftest 2.py  conftest.py  test_fixtures.py
tests/e2e/: test_data_service_e2e.py  test_model_service_e2e.py
tests/fixtures/: __init__.py  accuracy_test_data.py  base_config.yaml  benchmark_config.yaml  config_with_env_vars.yaml  custom_fields.csv  evaluation_test_scenarios.py  invalid_config.yaml  malformed.yaml  malformed_dataset.json  network_logs.json  override_config.yaml  performance_test_data.py  sample_dataset.csv  sample_dataset.json  sample_dataset.parquet  sample_emails.json  valid_config.yaml
tests/integration/: README_evaluation_tests.md  test_api_integration.py  test_complete_model_service.py  test_complete_model_service_simple.py  test_complete_workflow.py  test_comprehensive_evaluation_scenarios.py  test_configuration_service_integration.py  test_data_cache_integration.py  test_data_service_integration.py  test_database_integration.py  test_evaluation_service_explainability.py  test_evaluation_service_integration.py  test_evaluation_service_integration_simple.py  test_explainability_integration.py  test_huggingface_integration.py  test_kaggle_integration.py  test_mlx_integration.py  test_model_service_edge_cases.py  test_model_service_integration.py  test_ollama_integration.py  test_orchestration_integration.py  test_orchestration_service_complete.py  test_resource_integration.py  test_sample_configs.py  test_workflow_integration.py
tests/performance/: __init__.py  test_apple_silicon_performance.py  test_config_performance.py  test_data_service_performance.py  test_model_service_performance.py
tests/unit/: test_accuracy_evaluator.py  test_advanced_explainability.py  test_anthropic_plugin.py  test_base_evaluator.py  test_base_service.py  test_batch_evaluator.py  test_comparison_engine.py  test_config_caching.py  test_config_cli.py  test_config_loader.py  test_config_models.py  test_config_validators.py  test_configuration_service.py  test_data_cache.py  test_data_generators.py  test_data_models.py  test_data_service.py  test_database.py  test_database_manager.py  test_documentation_accuracy.py  test_email_preprocessor.py  test_env_resolution.py  test_evaluation_api.py  test_evaluation_results_storage.py  test_evaluation_service.py  test_evaluation_workflow.py  test_exceptions.py  test_explainability_evaluator.py  test_huggingface_loader.py  test_kaggle_loader.py  test_local_loader.py  test_logging.py  test_mlx_plugin.py  test_model_service.py  test_model_validator.py  test_model_validator_aiohttp_fallback.py  test_network_preprocessor.py  test_ollama_plugin.py  test_openai_plugin.py  test_orchestration_service.py  (+9 more)
tests/utils/: __init__.py  data_generators.py  demo_data_generation.py
tests/validation/: test_explainability_validation.py
(+36 files in other folders)
